# posGraduacao_MLE

./: main.py  pyproject.toml
Fase_1/: app.py  beautifulsoup.py  fase_1_anotacoes.md
Fase_2/: dynamoConnect.py  fase_2_anotacoes.md  step1.sql  step2.sql  step3.sql  step4.sql
